--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "migration:generate": "cross-var ts-node node_modules/typeorm/cli.js migration:generate -d ./src/data-source.ts ./src/migrations/$npm_config_name",
+    "migration:create": "cross-var ts-node node_modules/typeorm/cli.js migration:create ./src/migrations/$npm_config_name",
+    "migration:down": "ts-node node_modules/typeorm/cli.js migration:revert -d src/data-source.ts",
+    "migrate": "ts-node node_modules/typeorm/cli.js migration:run -d src/data-source.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -25,6 +29,7 @@
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "cross-var": "^1.1.0",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
